# DeepSpace

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  DESIGN.md  DEVELOPMENT.md  _link_test.cpp  a.out  artemis2_summary.json  artemis2_telemetry.csv
.sisyphus/: ralph-loop.local.md
.zcode/plans/: plan-sess_c797b018-b65f-4e5d-a433-0057e1a4b5d4.md
deepspace/: Cargo.toml
deepspace/src/: core.rs  environment.rs  frame_graph.rs  guidance.rs  lib.rs  physics.rs  scene.rs  simulation.rs  space_physics.rs  vessel.rs
demo/: Cargo.toml
demo/src/: app.rs  render.rs
docs/: artemis2-simulation-fidelity.md
missions/: artemis2.conf  artemis2.json  artemis2_columbia_breach.conf  artemis2_columbia_damage.conf  artemis2_vehicle.conf  columbia.conf  columbia_reentry_test.conf  columbia_test.conf  falcon9.conf
rust/: .gitignore  Cargo.toml
rust/missions/: artemis2.conf
rust/src/: app.rs  core.rs  environment.rs  guidance.rs  lib.rs  mission.rs  physics.rs  scene.rs
scenes/: figure8.scene  solar_system.scene  three_body.scene
sdk/mock/: EntryPoint.h  PrismaEngine.h
src/: DeepSpaceApp.cpp  DeepSpaceApp.h  lib.rs  main.cpp  scene.rs  space_physics.rs  vessel.rs
src/core/: Constants.h  Mat3x3.h  Quaternion.h  Vec3d.h
src/engine/: MockEngine.cpp  MockEngine.h
src/engine/ui/: MockUI.cpp  MockUI.h
src/environment/: AirlockExplosion.cpp  AirlockExplosion.h  CabinFire.cpp  CabinFire.h  DamageComponent.cpp  DamageComponent.h  DamageSystem.cpp  DamageSystem.h  Depressurization.cpp  Depressurization.h  LifeSupportDamage.cpp  LifeSupportDamage.h  MicrometeoriteImpact.cpp  MicrometeoriteImpact.h  Planet.h  PropulsionDamage.cpp  PropulsionDamage.h  StructuralDamage.cpp  StructuralDamage.h  TPSDamage.cpp  TPSDamage.h  ThermalSimulation.cpp  ThermalSimulation.h
src/mission/: Artemis2Mission.h  DeepSpaceMissionPlanner.h  MissionConfig.h  MissionControl.h  MissionData.h  MissionScript.cpp  MissionScript.h
src/physics/: Aerodynamics.h  ArtificialGravity.h  Coriolis.h  Integrators.h  LambertSolver.h  OrbitalElements.h  PhysicsBody.h  RotatingFrame.cpp  RotatingFrame.h
src/vessel/: DockingPort.cpp  DockingPort.h  EnduranceStation.cpp  EnduranceStation.h  Part.h  PartLibrary.h  RCS.h  Staging.h  Vessel.cpp  Vessel.h
tests/: core_tests.h
